Fixed collapse button visibility

--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -78,3 +78,13 @@ section {
 .navbar .navbar-nav .nav-link.active {
     color: #fed136;
 }
+
+.navbar .navbar-toggler {
+  color: transparent;
+  border: 1px solid #212529;
+  transition: border 0.2s ease-in-out;
+}
+
+.navbar .navbar-toggler:hover {
+  border: 1px solid #fed136;
+}
